tests/ui/attributes/collapse-debuginfo-invalid.stderr
error: `collapse_debuginfo` attribute should be applied to macro definitions
  --> $DIR/collapse-debuginfo-invalid.rs:7:1
   |
LL | #[collapse_debuginfo(yes)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | extern crate std;
   | ----------------- not a macro definition

error: `collapse_debuginfo` attribute should be applied to macro definitions
  --> $DIR/collapse-debuginfo-invalid.rs:11:1
   |
LL | #[collapse_debuginfo(yes)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | use std::collections::HashMap;
   | ------------------------------ not a macro definition

error: `collapse_debuginfo` attribute should be applied to macro definitions
  --> $DIR/collapse-debuginfo-invalid.rs:15:1
   |
LL | #[collapse_debuginfo(yes)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | static FOO: u32 = 3;
   | -------------------- not a macro definition

error: `collapse_debuginfo` attribute should be applied to macro definitions
  --> $DIR/collapse-debuginfo-invalid.rs:19:1
   |
LL | #[collapse_debuginfo(yes)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | const BAR: u32 = 3;
   | ------------------- not a macro definition

error: `collapse_debuginfo` attribute should be applied to macro definitions
  --> $DIR/collapse-debuginfo-invalid.rs:23:1
   |
LL |   #[collapse_debuginfo(yes)]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | / fn foo() {
LL | |     let _ = #[collapse_debuginfo(yes)]
LL | |     || {};
...  |
LL | | }
   | |_- not a macro definition

error: `collapse_debuginfo` attribute should be applied to macro definitions
  --> $DIR/collapse-debuginfo-invalid.rs:26:13
   |
LL |     let _ = #[collapse_debuginfo(yes)]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |     || {};
   |     ----- not a macro definition

error: `collapse_debuginfo` attribute should be applied to macro definitions
  --> $DIR/collapse-debuginfo-invalid.rs:29:5
   |
LL |     #[collapse_debuginfo(yes)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL |     let _ = 3;
   |     ---------- not a macro definition

error: `collapse_debuginfo` attribute should be applied to macro definitions
  --> $DIR/collapse-debuginfo-invalid.rs:32:13
   |
LL |     let _ = #[collapse_debuginfo(yes)]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |     3;
   |     - not a macro definition

error: `collapse_debuginfo` attribute should be applied to macro definitions
  --> $DIR/collapse-debuginfo-invalid.rs:36:9
   |
LL |         #[collapse_debuginfo(yes)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL |         _ => (),
   |         ------- not a macro definition

error: `collapse_debuginfo` attribute should be applied to macro definitions
  --> $DIR/collapse-debuginfo-invalid.rs:42:1
   |
LL | #[collapse_debuginfo(yes)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | mod bar {}
   | ---------- not a macro definition

error: `collapse_debuginfo` attribute should be applied to macro definitions
  --> $DIR/collapse-debuginfo-invalid.rs:46:1
   |
LL | #[collapse_debuginfo(yes)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | type Map = HashMap<u32, u32>;
   | ----------------------------- not a macro definition

error: `collapse_debuginfo` attribute should be applied to macro definitions
  --> $DIR/collapse-debuginfo-invalid.rs:50:1
   |
LL |   #[collapse_debuginfo(yes)]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | / enum Foo {
LL | |     #[collapse_debuginfo(yes)]
LL | |
LL | |     Variant,
LL | | }
   | |_- not a macro definition

error: `collapse_debuginfo` attribute should be applied to macro definitions
  --> $DIR/collapse-debuginfo-invalid.rs:53:5
   |
LL |     #[collapse_debuginfo(yes)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL |     Variant,
   |     ------- not a macro definition

error: `collapse_debuginfo` attribute should be applied to macro definitions
  --> $DIR/collapse-debuginfo-invalid.rs:58:1
   |
LL |   #[collapse_debuginfo(yes)]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | / struct Bar {
LL | |     #[collapse_debuginfo(yes)]
LL | |
LL | |     field: u32,
LL | | }
   | |_- not a macro definition

error: `collapse_debuginfo` attribute should be applied to macro definitions
  --> $DIR/collapse-debuginfo-invalid.rs:61:5
   |
LL |     #[collapse_debuginfo(yes)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL |     field: u32,
   |     ---------- not a macro definition

error: `collapse_debuginfo` attribute should be applied to macro definitions
  --> $DIR/collapse-debuginfo-invalid.rs:66:1
   |
LL |   #[collapse_debuginfo(yes)]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | / union Qux {
LL | |     a: u32,
LL | |     b: u16,
LL | | }
   | |_- not a macro definition

error: `collapse_debuginfo` attribute should be applied to macro definitions
  --> $DIR/collapse-debuginfo-invalid.rs:73:1
   |
LL |   #[collapse_debuginfo(yes)]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | / trait Foobar {
LL | |     #[collapse_debuginfo(yes)]
LL | |
LL | |     type Bar;
LL | | }
   | |_- not a macro definition

error: `collapse_debuginfo` attribute should be applied to macro definitions
  --> $DIR/collapse-debuginfo-invalid.rs:81:1
   |
LL | #[collapse_debuginfo(yes)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | type AFoobar = impl Foobar;
   | --------------------------- not a macro definition

error: `collapse_debuginfo` attribute should be applied to macro definitions
  --> $DIR/collapse-debuginfo-invalid.rs:94:1
   |
LL |   #[collapse_debuginfo(yes)]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | / impl Bar {
LL | |     #[collapse_debuginfo(yes)]
LL | |
LL | |     const FOO: u32 = 3;
...  |
LL | |     fn bar(&self) {}
LL | | }
   | |_- not a macro definition

error: `collapse_debuginfo` attribute should be applied to macro definitions
  --> $DIR/collapse-debuginfo-invalid.rs:76:5
   |
LL |     #[collapse_debuginfo(yes)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL |     type Bar;
   |     --------- not a macro definition

error: `collapse_debuginfo` attribute should be applied to macro definitions
  --> $DIR/collapse-debuginfo-invalid.rs:97:5
   |
LL |     #[collapse_debuginfo(yes)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL |     const FOO: u32 = 3;
   |     ------------------- not a macro definition

error: `collapse_debuginfo` attribute should be applied to macro definitions
  --> $DIR/collapse-debuginfo-invalid.rs:101:5
   |
LL |     #[collapse_debuginfo(yes)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL |     fn bar(&self) {}
   |     ---------------- not a macro definition

error: aborting due to 22 previous errors

